--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<p>
 			I am 23 and studying <strong>Digital Marketing</strong>. I have experiences in marketing, communication, and luxury. I am crazy about photography, and my cute cat Simba.</p>
 
-			<a href="https://www.linkedin.com/in/emilie-chevallier/" class="btn-blue" target="_blank">Discover More about Me</a>
+			<a href="https://www.linkedin.com/in/emilie-chevallier/" class="btn-red" target="_blank">Discover More about Me</a>
 
 		</div>
 		
