--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			
 			<h2>My Studies</h2>
 			
-			<p> I am currently doing <strong>a Master in Management in Audencia Business School</strong>. I am specialized in Digital Marketing 	and Data Strategies. I studied international marketing and management in San Diego State University during the first semester of 2022. I have already worked in luxury as a Pim Dam Assistant at Van Cleef & Arpels and as Client Advisor at Longchamp.</p>
+			<p> I am currently doing <strong>a Master in Management in Audencia Business School</strong>. I am specialized in Digital Marketing and Data Strategies. I studied international marketing and management in San Diego State University during the first semester of 2022. I have already worked in luxury as a Pim Dam Assistant at Van Cleef & Arpels and as a Client Advisor at Longchamp.</p>
 
 		</div>
 
@@ -45,7 +45,7 @@
 			
 			<h2>My Projects</h2>
 			
-			<p>I am working <strong>on blog </strong>in which I will analyse the luxury industry. I will talk about the current trends and give my opinion. The objective is to know more about it and develop my analysis skills. Besides, I am also working on an entrepreneur concept and I will see if I can in the end launch a platform to help artists.</p>
+			<p>I am working <strong>on a blog </strong>in which I will analyse the luxury industry. I will talk about the current trends and give my opinion. The objective is to know more about it and develop my analysis skills. Besides, I am also working on an app with the Emerge Program with Audencia. I will see if I can in the end launch it. The goal is to help artists to find clients.</p>
 
 		</div>
 				
@@ -54,7 +54,7 @@
 			
 			<h2>Who I am</h2>
 
-			<p>I am very invested in what I love. It is very important to me to do what I like. I am patient and very creative. I always have many ideas and love discovering new activities.</p>
+			<p>I am very invested in everything I do. It is also very important to me to do what I like, it is easier for me to work. I am patient and very creative. I always have many ideas and love discovering new activities.</p>
 
 		</div>
 		
